force-app/main/default/objects/Supplier_Staging_Convert__mdt.object
<CustomObject>
    <fields>
        <fullName>FromFieldName__c</fullName>
        <label>FromFieldName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromObjectName__c</fullName>
        <label>FromObjectName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier_Staging__c</fullName>
                    <default>true</default>
                    <label>Supplier_Staging__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToFieldName__c</fullName>
        <label>ToFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToObjectName__c</fullName>
        <label>ToObjectName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supplier Staging  Convert</label>
    <listViews>
        <fullName>Object_Field_Names</fullName>
        <columns>FromObjectName__c</columns>
        <columns>FromFieldName__c</columns>
        <columns>ToObjectName__c</columns>
        <columns>ToFieldName__c</columns>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <filterScope>Everything</filterScope>
        <label>Object Field Names</label>
    </listViews>
    <pluralLabel>Supplier Staging Converts</pluralLabel>
</CustomObject>